<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yabi.yabiuserandroid.fragments.SigninProfileFragment"
    android:background="@android:color/white">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:padding="@dimen/margins_20"
       >

      <de.hdodenhof.circleimageview.CircleImageView
          xmlns:app="http://schemas.android.com/apk/res-auto"
          android:id="@+id/img_profile"
          android:layout_width="@dimen/signin_profile_width"
          android:layout_height="@dimen/signin_profile_width"
          app:civ_border_width="@dimen/dimen_2"
          app:civ_border_color="@android:color/black"
          android:layout_margin="@dimen/margins_30"
          android:layout_gravity="center"/>
       <com.yabi.yabiuserandroid.ui.uiutils.palette.CustomFontEditTextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/string_email"
           android:textColorHint="@color/color_primary_hint_text"
           android:id="@+id/txt_profile_email"
           android:layout_marginBottom="@dimen/margins_10"
           android:editable="false"
           android:enabled="false"
           android:focusableInTouchMode="false"
           />
      <com.yabi.yabiuserandroid.ui.uiutils.palette.CustomFontEditTextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/string_name"
          android:textColorHint="@color/color_primary_hint_text"
          android:id="@+id/txt_profile_name"
          android:layout_marginBottom="@dimen/margins_10"
          android:nextFocusDown="@+id/txt_profile_age"
          />
       <com.yabi.yabiuserandroid.ui.uiutils.palette.CustomFontEditTextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/string_age"
           android:textColorHint="@color/color_primary_hint_text"
           android:id="@+id/txt_profile_age"
           android:layout_marginBottom="@dimen/margins_10"
           android:inputType="number"
           android:nextFocusDown="@id/txt_profile_phone"
           />
      <com.yabi.yabiuserandroid.ui.uiutils.palette.CustomFontEditTextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/string_phone_no"
          android:textColorHint="@color/color_primary_hint_text"
          android:id="@+id/txt_profile_phone"
          android:layout_marginBottom="@dimen/margins_10"
          android:inputType="number"
          android:nextFocusDown="@+id/radio_group_gender"
          />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">
            <com.yabi.yabiuserandroid.ui.uiutils.palette.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margins_10"
                android:text="@string/string_gender"
                android:textSize="@dimen/text_18"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radio_group_gender"
                android:layout_marginTop="@dimen/margins_5">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_male"
                    android:text="@string/string_male"
                    android:layout_marginLeft="@dimen/margins_10"
                    android:layout_marginStart="@dimen/margins_10"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:checked="true"
                    android:nextFocusRight="@+id/radio_female"
                    android:nextFocusDown="@+id/btn_next"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_female"
                    android:text="@string/string_female"
                    android:layout_marginLeft="@dimen/margins_10"
                    android:layout_marginStart="@dimen/margins_10"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:nextFocusLeft="@+id/radio_male"
                    android:nextFocusDown="@+id/btn_next"
                    />
            </RadioGroup>

        </LinearLayout>
      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/btn_next"
          android:text="@string/string_next"
          android:visibility="visible"
          android:layout_gravity="center"
          android:background="@android:color/holo_blue_dark"
          android:layout_marginTop="@dimen/margins_30"
          android:contentDescription="@string/string_next"/>

       
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.yabi.yabiuserandroid.ui.uiutils.palette.CustomFontEditTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_otp"
                android:textColor="@color/color_primary"
                android:visibility="gone"
                android:textColorHint="@color/color_primary_hint_text"
                android:id="@+id/txt_profile_otp"
                android:layout_marginTop="@dimen/margins_20"
                android:layout_marginBottom="@dimen/margins_10"
                android:inputType="number"
                android:nextFocusDown="@+id/btn_verify"
                />
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/margins_5"
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleSmall"
                android:layout_centerVertical="true"
                android:visibility="gone"
                />


        </RelativeLayout>
       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/btn_verify"
           android:text="@string/string_resend_otp"
           android:visibility="gone"
           android:layout_gravity="center"
           android:background="@android:color/holo_blue_dark"
           android:contentDescription="@string/string_verify"
           />

   </LinearLayout>

</ScrollView>
