<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".fragments.ReferActivityFragment"
    tools:showIn="@layout/activity_refer">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_above="@+id/btn_invite">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <ImageView
            android:layout_width="@dimen/signin_profile_width"
            android:layout_height="@dimen/signin_profile_width"
            android:src="@drawable/ic_face_black_24dp"
            android:layout_gravity="center_horizontal"/>
            <com.yabi.yabiuserandroid.ui.uiutils.palette.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_share_invite"
                android:layout_margin="@dimen/margins_10"
                android:layout_gravity="center_horizontal"/>
            <com.yabi.yabiuserandroid.ui.uiutils.palette.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_share_invite"
                android:layout_margin="@dimen/margins_10"
                android:textColor="@color/color_primary"
                android:textSize="@dimen/text_24"
                android:layout_gravity="center_horizontal"
                android:id="@+id/txt_invite_code"/>
            <com.yabi.yabiuserandroid.ui.uiutils.palette.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_share_message"
                android:layout_margin="@dimen/margins_10"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"/>
        </LinearLayout>
    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_invite"
        android:text="@string/string_invite"
        android:visibility="visible"
        android:layout_gravity="center"
        android:background="@android:color/holo_blue_dark"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/margins_20"
        android:layout_marginBottom="@dimen/margins_40"
        android:layout_marginRight="@dimen/margins_20"
        android:layout_marginEnd="@dimen/margins_20"
        android:layout_marginStart="@dimen/margins_20"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/margins_40"
        />
</RelativeLayout>
