<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.yabi.yabiuserandroid.fragments.SigninProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margins_30">



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margins_10"
            app:contentPadding="@dimen/margins_10"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/margins_10">
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_face_black_24dp"
                        android:background="@android:color/transparent"
                        android:id="@+id/icon_gender"
                        android:contentDescription="@string/content_gender"/>
                    <com.yabi.yabiuserandroid.ui.uiutils.palette.CustomFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_profile_gender"
                        android:text="Male"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/text_18"
                        android:layout_marginLeft="@dimen/margins_10"
                        android:layout_marginStart="@dimen/margins_10"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/margins_10">
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_call_black_24dp"
                        android:background="@android:color/transparent"
                        android:id="@+id/icon_phone"
                        android:contentDescription="@string/string_phone_no"/>
                    <com.yabi.yabiuserandroid.ui.uiutils.palette.CustomFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_profile_phone"
                        android:text="Male"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/text_18"
                        android:layout_marginLeft="@dimen/margins_10"
                        android:layout_marginStart="@dimen/margins_10"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/margins_10">
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_email_black_24dp"
                        android:background="@android:color/transparent"
                        android:id="@+id/icon_email"
                        android:contentDescription="@string/string_email"/>
                    <com.yabi.yabiuserandroid.ui.uiutils.palette.CustomFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_profile_email"
                        android:text="Male"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/text_18"
                        android:layout_marginLeft="@dimen/margins_10"
                        android:layout_marginStart="@dimen/margins_10"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:contentDescription="@string/content_joining">
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_access_time_black_24dp"
                        android:background="@android:color/transparent"
                        android:id="@+id/icon_joining"/>
                    <com.yabi.yabiuserandroid.ui.uiutils.palette.CustomFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_profile_joining"
                        android:text="Male"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/text_18"
                        android:layout_marginLeft="@dimen/margins_10"
                        android:layout_marginStart="@dimen/margins_10"/>
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chart1"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_above="@+id/seekBar1"
            android:visibility="gone"/>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
